jemny fix wrapovani menicka, fix wrapovani obrazku team vedle emilky

--- a/web-content/style/indigo-style.css
+++ b/web-content/style/indigo-style.css
@@ -268,10 +268,24 @@ article {
    MENU, NAVIGATION
    =================== */
 
+header figure.logo_small {
+    width:50px;
+    height:50px;
+    margin-top: -1em;
+    background-repeat: no-repeat;
+    background-image: url('../img/logo/logo_50x50.png');
+    background-size: contain;
+    background-position: center;
+    display:inline;
+    margin-right: 1em;
+    float:left;
+    z-index: 2;
+}
 
-nav {display:inline; float: left; word-spacing:0.3em}
-nav.main{width: auto; }
-nav.lang{width: 8em; float: right}
+
+nav {display:inline; white-space: nowrap; float: left; word-spacing:0.3em}
+nav.main{width: 81.25%; }
+nav.lang{width: 6.25%; min-width: 5em; float: right; }
 nav.sub {float: none; }
 
 nav.main li a, nav.sub li a {
@@ -372,20 +386,6 @@ article figure.team {
     margin-right: 1em;
     float:left;
     z-index: -1;
-}
-
-header figure.logo_small {
-    width:50px;
-    height:50px;
-    margin-top: -1em;
-    background-repeat: no-repeat;
-    background-image: url('../img/logo/logo_50x50.png');
-    background-size: contain;
-    background-position: center;
-    display:inline;
-    margin-right: 1em;
-    float:left;
-    z-index: 2;
 }
 
 figure a {
